k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: masaar
  labels:
    name: masaar
    app: masaar-crm
